[package]
name = "rusty-x"
version = "0.1.75"
authors = ["Tim de Jager <tdejager89@gmail.com>"]
include = ["src/*.rs", "src/bin/*.rs", "Cargo.toml"]
readme = "README.md"
keywords = ["snippets", "cli"]
repository = "https://github.com/tdejager/rusty-x"
license = "MIT"
description = "A snippet manager in Rust"
edition="2018"


[dependencies]
colored = "1.6"
markdown = "0.2"
prettyprint = "0.3.0"
toml = "0.4"
serde_derive = "1.0.66"
serde = "1.0.66"
dirs = "1.0.3"
docopt = "1"
ansi_term = "0.11.0"
crossterm = "0.10"
fuzzy-matcher = "0.2.1"

[lib]
path = "src/lib.rs"


[[bin]]
name = "x"
path = "src/bin/main.rs"
